--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
 <!DOCTYPE html>
-<html><head><title>JS</title><script type="module" defer src="genClass.js"></script></head></html>
+<html lang="en">
+<head>
+    <title>JS</title>
+</head>
+<body>
+    <header>
+        <span>
+            <h1>Hello</h1>
+            <button class="playBtn">click me</button>
+        </span>
+    </header>
+    <main></main>
+    <footer></footer>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/Js/main.js" type="module"></script>
+
+</body>
+</html>
