added stop button

--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html lang="en">
 <head>
     <title>JS</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
         <span>
-            <h1>Hello</h1>
-            <button class="playBtn">click me</button>
+            <h1>Js Music Generator</h1>
+        </span>
+        <span class="creds">
+            <a href="" target="_blank">Github</a>
+            <a href="" target="_blank">Portfolio</a>
         </span>
     </header>
-    <main></main>
+    <main id="pageMain">
+        <section>
+            <article id="playButton">
+                <span>
+                    <button class="stopBtn">stop</button>
+                    <button class="playBtn">start</button>
+                </span>
+            </article>
+        </section>
+    </main>
     <footer></footer>
 
 
