--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     <button class="stopBtn">stop</button>
                     <button class="playBtn">start</button>
                 </span>
+                <div>
+                    <p id="note_display"></p>
+                    <p id="sequence_display"></p>
+                </div>
             </article>
         </section>
     </main>
