added scale choice

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     </header>
     <main id="pageMain">
         <section>
+            <article id="scale_choice">
+                <span>
+                    <button class="scale_choice_btn">D Harmonic Minor</button>
+                </span>
+            </article>
             <article id="playButton">
                 <span>
                     <button class="stopBtn">stop</button>
