--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
             <div id="scalesWrapper">
                 <article id="scale_choice">
                     <span>
-                        <button class="scale_choice_btn">D Harmonic Minor</button>
+                        <div>
+                            <button class="scale_choice_btn">C# Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">D Harmonic Minor</button>
+                        </div>
                     </span>
                 </article>
             </div>
