full range harmonic minor

--- a/index.html
+++ b/index.html
@@ -28,6 +28,36 @@
                         <div>
                             <button class="scale_choice_btn">D Harmonic Minor</button>
                         </div>
+                        <div>
+                            <button class="scale_choice_btn">C Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">B Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">A# Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">A Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">D# Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">E Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">F Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">F# Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">G Harmonic Minor</button>
+                        </div>
+                        <div>
+                            <button class="scale_choice_btn">G# Harmonic Minor</button>
+                        </div>
                     </span>
                 </article>
             </div>
