random note generation

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <span>
                         <button class="stopBtn">stop</button>
                         <button class="playBtn">start</button>
+                        <button class="randBtn">Random</button>
                     </span>
                 </article>
             </div>
