--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 <article id="playButton">
                     <span>
                         <button class="stopBtn">stop</button>
-                        <button class="playBtn">start</button>
+                        <button class="playBtn">Sequence</button>
+                        <button class="playPat">Pattern</button>
                         <button class="randBtn">Random</button>
                     </span>
                 </article>
