fixed line break issue

--- a/index.html
+++ b/index.html
@@ -23,40 +23,40 @@
                 <article id="scale_choice">
                     <span>
                         <div>
-                            <button class="scale_choice_btn">C# Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">C# Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">D Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">D Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">C Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">C Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">B Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">B Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">A# Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">A# Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">A Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">A Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">D# Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">D# Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">E Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">E Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">F Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">F Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">F# Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">F# Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">G Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">G Harmonic Minor</h3>
                         </div>
                         <div>
-                            <button class="scale_choice_btn">G# Harmonic Minor</button>
+                            <h3 class="scale_choice_btn">G# Harmonic Minor</h3>
                         </div>
                     </span>
                 </article>
@@ -72,14 +72,13 @@
             <div id="controlsWrapper">
                 <article id="playButton">
                     <span>
-                        <button class="stopBtn">stop</button>
-                        <button class="playBtn">Sequence</button>
-                        <button class="playPat">Pattern</button>
-                        <button class="randBtn">Random</button>
+                        <h3 class="stopBtn">Stop</h3>
+                        <h3 class="playBtn">Sequence</h3>
+                        <h3 class="playPat">Pattern</h3>
+                        <h3 class="randBtn">Random</h3>
                     </span>
                 </article>
             </div>
-
         </section>
     </main>
     <footer>
