webpage design and layout

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <main id="pageMain">
         <section>
             <div id="scalesWrapper">
+                <article class="displayChosen">
+                    <span>
+                        <div>
+                            <h4>Chosen scale:</h4>
+                            <p id="chosenScale">Please pick a scale!</p>
+                        </div>
+                    </span>
+                </article>
                 <article id="scale_choice">
                     <span>
                         <div>
@@ -74,7 +82,7 @@
                     <span>
                         <h3 class="stopBtn">Stop</h3>
                         <h3 class="playBtn">Sequence</h3>
-                        <h3 class="playPat">Pattern</h3>
+
                         <h3 class="randBtn">Random</h3>
                     </span>
                 </article>
